[gd_scene load_steps=10 format=2]

[ext_resource path="res://tiles.tres" type="TileSet" id=1]
[ext_resource path="res://parallax-mountain-bg.png" type="Texture" id=2]
[ext_resource path="res://parallax-mountain-montain-far.png" type="Texture" id=3]
[ext_resource path="res://parallax-mountain-foreground-trees.png" type="Texture" id=4]
[ext_resource path="res://parallax-mountain-trees.png" type="Texture" id=5]
[ext_resource path="res://parallax-mountain-mountains.png" type="Texture" id=6]
[ext_resource path="res://level_2.gd" type="Script" id=7]

[sub_resource type="LineShape2D" id=1]
normal = Vector2( 0.000106611, -1 )
d = 5.43509

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.8184, 69.7502 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 48, -1128 )
scale = Vector2( 3, 3 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -2490370, 1, 0, -2555777, 1, 0, -2424834, 1, 0, -2490241, 1, 0, -2359298, 1, 0, -2424705, 1, 0, -2293762, 1, 0, -2359169, 1, 0, -2228226, 1, 0, -2293633, 1, 0, -2162690, 1, 0, -2228097, 1, 0, -2097154, 1, 0, -2162561, 1, 0, -2031618, 1, 0, -2097025, 1, 0, -1966082, 1, 0, -2031489, 1, 0, -1900546, 1, 0, -1965953, 1, 0, -1835010, 1, 0, -1900417, 1, 0, -1769474, 1, 0, -1834881, 1, 0, -1703938, 1, 0, -1769345, 1, 0, -1638402, 1, 0, -1703809, 1, 0, -1572866, 1, 0, -1638273, 1, 0, -1507330, 1, 0, -1572737, 1, 0, -1441794, 1, 0, -1507201, 1, 0, -1376258, 1, 0, -1441665, 1, 0, -1310722, 1, 0, -1376129, 1, 0, -1245186, 1, 0, -1310593, 1, 0, -1179650, 1, 0, -1245057, 1, 0, -1114114, 1, 0, -1179521, 1, 0, -1048578, 1, 0, -1113985, 1, 0, -983042, 1, 0, -1048449, 1, 0, -917506, 1, 0, -982913, 1, 0, -851970, 1, 0, -917377, 1, 0, -786434, 1, 0, -851841, 1, 0, -720898, 1, 0, -786305, 1, 0, -655362, 1, 0, -720769, 1, 0, -589826, 1, 0, -655233, 1, 0, -524290, 1, 0, -589697, 1, 0, -458754, 1, 0, -524161, 1, 0, -393218, 1, 0, -458625, 1, 0, -327682, 1, 0, -393089, 1, 0, -262146, 1, 0, -327553, 1, 0, -196610, 1, 0, -262017, 1, 0, -131074, 1, 0, -196481, 1, 0, -65538, 1, 0, -130945, 1, 0, -2, 1, 0, -65409, 1, 0, 65534, 1, 0, 127, 1, 0, 131070, 1, 0, 65663, 1, 0, 196606, 1, 0, 131199, 1, 0, 262142, 1, 0, 196735, 1, 0, 327678, 1, 0, 262271, 1, 0, 393214, 1, 0, 327807, 1, 0, 458750, 1, 0, 393343, 1, 0, 524286, 1, 0, 458879, 1, 0, 589822, 1, 0, 524415, 1, 0, 655358, 1, 0, 589951, 1, 0, 720894, 1, 0, 655487, 1, 0, 786430, 1, 0, 721023, 1, 0, 851966, 1, 0, 786559, 1, 0, 917502, 1, 0, 852095, 1, 0, 983038, 1, 0, 917631, 1, 0, 1048574, 1, 0, 983167, 1, 0, 1114110, 1, 0, 1048703, 1, 0, 1179646, 1, 0, 1114239, 1, 0, 1245182, 1, 0, 1179775, 1, 0, 1310718, 1, 0, 1245311, 1, 0, 1376254, 1, 0, 1310836, 0, 0, 1310847, 1, 0, 1441790, 1, 0, 1376383, 1, 0, 1507326, 1, 0, 1441885, 0, 0, 1441919, 1, 0, 1572862, 1, 0, 1507430, 0, 0, 1507455, 1, 0, 1638398, 1, 0, 1572905, 1, 0, 1572974, 0, 0, 1572991, 1, 0, 1703934, 1, 0, 1638441, 1, 0, 1638527, 1, 0, 1769470, 1, 0, 1703976, 1, 0, 1704025, 0, 0, 1835006, 1, 0, 1769487, 1, 0, 1769488, 1, 0, 1769489, 1, 0, 1769490, 1, 0, 1769491, 1, 0, 1769492, 1, 0, 1769493, 1, 0, 1769494, 1, 0, 1769500, 0, 0, 1769512, 1, 0, 1769523, 0, 0, 1769553, 0, 0, 1900542, 1, 0, 1835048, 1, 0, 1966078, 1, 0, 1900549, 0, 0, 1900580, 2, 0, 1900600, 1, 0, 1900601, 1, 0, 1900602, 1, 0, 2031614, 1, 0, 1966115, 1, 0, 1966117, 1, 0, 1966138, 1, 0, 1966139, 1, 0, 1966153, 1, 0, 1966154, 1, 0, 1966155, 1, 0, 1966204, 2, 0, 2097150, 1, 0, 2031626, 1, 0, 2031627, 1, 0, 2162686, 1, 0, 2097219, 1, 0, 2097220, 1, 0, 2097221, 1, 0, 2097222, 1, 0, 2097223, 1, 0, 2097224, 1, 0, 2097225, 1, 0, 2097226, 1, 0, 2097227, 1, 0, 2359294, 1, 0, 2359295, 1, 0, 2293760, 1, 0, 2293761, 1, 0, 2293763, 1, 0, 2293764, 3, 0, 2293768, 1, 0, 2293769, 1, 0, 2293770, 1, 0, 2293771, 1, 0, 2293772, 1, 0, 2293773, 1, 0, 2293774, 3, 0, 2293775, 3, 0, 2293776, 3, 0, 2293779, 1, 0, 2293780, 1, 0, 2293781, 1, 0, 2293782, 1, 0, 2293783, 1, 0, 2293784, 1, 0, 2293785, 1, 0, 2293786, 1, 0, 2293788, 1, 0, 2293789, 1, 0, 2293790, 1, 0, 2293791, 1, 0, 2293792, 1, 0, 2293794, 1, 0, 2293795, 1, 0, 2293796, 1, 0, 2293797, 1, 0, 2293798, 1, 0, 2293799, 1, 0, 2293800, 1, 0, 2293803, 1, 0, 2293804, 1, 0, 2293805, 1, 0, 2293806, 1, 0, 2293807, 1, 0, 2293808, 1, 0, 2293809, 1, 0, 2293810, 1, 0, 2293811, 1, 0, 2293814, 1, 0, 2293815, 1, 0, 2293816, 1, 0, 2293817, 1, 0, 2293818, 1, 0, 2293819, 1, 0, 2293820, 1, 0, 2293821, 1, 0, 2293822, 1, 0, 2293823, 1, 0, 2293824, 1, 0, 2293825, 1, 0, 2293826, 1, 0, 2293828, 1, 0, 2293829, 1, 0, 2293830, 1, 0, 2293831, 1, 0, 2293832, 1, 0, 2293833, 1, 0, 2293834, 1, 0, 2293835, 1, 0, 2293837, 1, 0, 2293839, 1, 0, 2293840, 1, 0, 2293841, 1, 0, 2293842, 1, 0, 2293843, 1, 0, 2293844, 1, 0, 2293845, 1, 0, 2293846, 1, 0, 2293847, 1, 0, 2293848, 1, 0, 2293849, 1, 0, 2293850, 1, 0, 2293851, 1, 0, 2293852, 1, 0, 2293853, 1, 0, 2293854, 1, 0, 2293855, 1, 0, 2293856, 1, 0, 2293857, 1, 0, 2293858, 1, 0, 2293859, 1, 0, 2293860, 1, 0, 2293861, 1, 0, 2293862, 1, 0, 2293863, 1, 0, 2293864, 1, 0, 2293865, 1, 0, 2293866, 1, 0, 2293867, 1, 0, 2293868, 1, 0, 2293869, 1, 0, 2293870, 1, 0, 2293871, 1, 0, 2293872, 1, 0, 2293873, 1, 0, 2293874, 1, 0, 2293875, 1, 0, 2293876, 1, 0, 2293877, 1, 0, 2293878, 1, 0, 2293879, 1, 0, 2293880, 1, 0, 2293881, 1, 0, 2293884, 3, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2( 0.1, 0.1 )

[node name="bg" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -3070 )
scale = Vector2( 56.5, 56.5 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxBackground3" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground3"]
scale = Vector2( 0.1, 0.1 )

[node name="bg" type="Sprite" parent="ParallaxBackground3/ParallaxLayer"]
position = Vector2( 15360, -3040 )
scale = Vector2( 56.5, 56.5 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxBackground4" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground4"]
scale = Vector2( 0.1, 0.1 )

[node name="bg" type="Sprite" parent="ParallaxBackground4/ParallaxLayer"]
position = Vector2( 30720, -3040 )
scale = Vector2( 56.5, 56.5 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxBackground10" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground10"]
scale = Vector2( 0.1, 0.1 )

[node name="bg" type="Sprite" parent="ParallaxBackground10/ParallaxLayer"]
position = Vector2( 46080, -3040 )
scale = Vector2( 56.5, 56.5 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.001, 0.001 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_mirroring = Vector2( 3072, 0 )

[node name="far mountain" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 8, -896 )
scale = Vector2( 9.3, 9.3 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxBackground5" type="ParallaxBackground" parent="."]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )
scroll_base_scale = Vector2( 0.07, 0.07 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground5"]

[node name="close mountain" type="Sprite" parent="ParallaxBackground5/ParallaxLayer"]
position = Vector2( -2.00704, -45.3333 )
scale = Vector2( 1.41176, 1.5 )
texture = ExtResource( 6 )
centered = false

[node name="ParallaxBackground6" type="ParallaxBackground" parent="."]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )
scroll_base_scale = Vector2( 0.07, 0.07 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground6"]

[node name="close mountain" type="Sprite" parent="ParallaxBackground6/ParallaxLayer"]
position = Vector2( 768, -40 )
scale = Vector2( 1.41176, 1.5 )
texture = ExtResource( 6 )
centered = false

[node name="ParallaxBackground9" type="ParallaxBackground" parent="."]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )
scroll_base_scale = Vector2( 0.07, 0.07 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground9"]

[node name="close mountain" type="Sprite" parent="ParallaxBackground9/ParallaxLayer"]
position = Vector2( 1536, -40 )
scale = Vector2( 1.41176, 1.5 )
texture = ExtResource( 6 )
centered = false

[node name="ParallaxBackground8" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.05, 0.05 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground8"]
motion_mirroring = Vector2( 3072, 0 )

[node name="far trees" type="Sprite" parent="ParallaxBackground8/ParallaxLayer"]
position = Vector2( 1.97901, -528 )
scale = Vector2( 5.65, 7.05 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxBackground7" type="ParallaxBackground" parent="."]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )
scroll_base_scale = Vector2( 0.1, 0.1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground7"]
motion_mirroring = Vector2( 1024, 0 )

[node name="close trees" type="Sprite" parent="ParallaxBackground7/ParallaxLayer"]
position = Vector2( -2.66667, -104 )
scale = Vector2( 1.88235, 1.9 )
texture = ExtResource( 5 )
centered = false

[node name="Floor_Of_Death" type="Area2D" parent="."]
position = Vector2( 4.19019, 29.3301 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor_Of_Death"]
position = Vector2( 3312.21, 609.874 )
scale = Vector2( 35, 1 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 6045.58, 481.354 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Floor_Of_Death" to="." method="_on_Floor_Of_Death_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
